@@ -7,6 +7,7 @@ Upcoming:
 - New opcodes ('do_vector_max' and 'do_vector_min') to find the index of the largest or smallest item in a vector
 - New opcode ('eval_vector_indices') to generate a vector of integers starting with 0
 - There was a chance that a programmer would not correctly save its current program on exit. Loading the world again would revert to an older program. This has now been fixed
+- Converting a vector to a string will now give a short summary of its contents instead of just []
 
 1.9.3:
 - Needs McJtyLib 3.1.0
